martian-derive/tests/ui_make_mro/attr_on_stage_struct.rs
use martian_derive::make_mro;

#[make_mro]
struct StageFoo;

fn main() {}
